# Sentry

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Doc/: 00_DOCUMENT_INDEX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SOP.md  MONITORING_SETUP.md  QUICK_REFERENCE.md  README_DEPLOYMENT_DOCS.md  TROUBLESHOOTING_TREE.md  Tecnical sum  folder  interaction flow
app/: config.py  main.py
app/api/v1/: tasks.py
app/auth/: audit.py  database.py  dependencies.py  models.py  permissions.py  schemas.py  seed.py  service.py
app/core/: exceptions.py  logging.py  response.py  security.py
app/repositories/: __init__.py
app/repositories/db/: business_registry.py
app/repositories/filesystem/: __init__.py  loader.py
app/websocket/: __init__.py  manager.py  metrics.py  pubsub_bridge.py  routes.py
app/workers/: __init__.py  base.py  celery_app.py  celery_beat.py  progress.py
app/workers/jobs/: audit_jobs.py  business_jobs.py  resource_jobs.py  system_jobs.py
tests/: test_fs_loader.py  test_workers_progress.py  test_ws_manager.py  test_ws_routes.py
